--- a/src/style.css
+++ b/src/style.css
@@ -21,12 +21,11 @@ h1 {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  align-items: center;
+  margin-left: 20%
 }
 
 .recentScoreTitle {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -42,7 +41,7 @@ h2 {
 
 .recentScoreList {
   border: 2px solid black;
-  width: 80%;
+  width: 60%;
   margin-top: 1rem;
 }
 
