--- a/src/style.css
+++ b/src/style.css
@@ -114,3 +114,8 @@ div ul li:nth-child(even) {
   cursor: pointer;
   transition: all 0.3s ease-in-out;
 }
+
+#submit:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
